# Delivery-Platform

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
libs/platform-common/: pyproject.toml
libs/platform-common/platform_common/: __init__.py  auth.py  consumer_reliability.py  dlq.py  observability.py  outbox.py  telemetry.py  tracing.py
observability/: RUNBOOK.md
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yml
scripts/: kafka-dlq-tool.py  run-gateway-e2e.sh  smoke-service-compose.sh  start-test-kafka.sh  start-test-postgres.sh  stop-test-kafka.sh  stop-test-postgres.sh  wait-for-compose-services.sh
services/admin-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/api-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/tracking-service/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/tracking-service/alembic/: env.py
services/tracking-service/alembic/versions/: 0001_create_tracking.py  0002_create_outbox.py
services/tracking-service/app/: main.py  metrics.py
services/tracking-service/app/api/: routes.py
services/tracking-service/app/core/: auth.py  config.py
services/tracking-service/app/db/: models.py
services/tracking-service/app/kafka/: consumer.py  events.py  producer.py
services/tracking-service/app/schemas/: tracking.py
services/tracking-service/app/services/: tracking_service.py
services/tracking-service/tests/: conftest.py  test_event_pipeline.py  test_tracking_api.py
test_support/: __init__.py  postgres.py
(+152 files in other folders)
